# Specter-OS

./: .env.example  .gitignore  Dockerfile  README.md  demo_seed.py  docker-compose.yml  dummy_agent.py  pyproject.toml
app/: __init__.py  cli.py  config.py  database.py  llm_factory.py  main.py
app/agents/: __init__.py  commander.py  forge.py  injector.py  judge.py  scout.py
app/api/: __init__.py  attacks.py  campaigns.py  reports.py
app/models/: __init__.py  attack.py  campaign.py  finding.py
app/services/: __init__.py  orchestrator.py  report.py
app/tools/: aura_bridge.py
app/utils/: logger.py
dashboard/: index.html
