[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "specter-os"
version = "1.0.0"
description = "Autonomous AI Agent Red Teaming Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Specter Security", email = "security@specter-os.io" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.5",
    "langchain-community>=0.2.0",
    "langgraph>=0.1.5",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "aiosqlite>=0.20.0",
    "reportlab>=4.2.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "typer>=0.12.3",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
]

[project.scripts]
specter = "app.cli:app"
